pigeon-macros/tests/ui/enum_input.stderr
error: Reconstitute only supports structs, not enums
 --> tests/ui/enum_input.rs:4:10
  |
4 | pub enum BadEnum {
  |          ^^^^^^^
