pigeon-macros/tests/ui/enum_input.rs
use pigeon_macros::Reconstitute;

#[derive(Reconstitute)]
pub enum BadEnum {
    A,
    B,
}

fn main() {}
